tests/error/argumentNameFunction.tpc
int test(int test){
    return test(1);
}

int main(void)
{
    return 0;
}
